# CUDA-Spectral-Pathtracer

./: CMakeLists.txt  README.md  after_cornell_measured_scene1_cornell_prism_20260602_161647.ppm  after_cornell_measured_scene2_prism_showcase_20260602_161647.ppm  after_cornell_measured_scene3_material_showcase_20260602_161647.ppm
docs/: SPECTRAL_RENDERING.md
include/: cornell_spectral_data.cuh  hittable.cuh  material.cuh  scene_setup.h  spectral_tables.cuh  spectrum.cuh  vec3.cuh
src/: cuda_kernels.cu  image_io.cpp  main.cpp  scene_setup.cpp
test/: test_camera.cpp  test_intersections.cu  test_main.cpp  test_materials.cu  test_spectrum.cpp  test_vec3.cpp
